# 6-team-team6-ai

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  cicd-docker.yml  dev-cd.yml  runpod-deploy.yml
app/: main.py
app/VectorDB/: qdrant_setting.py
app/prompts/: generate_prompt.py  validate_prompt.py
app/routers/: qwen_router.py
app/schemas/: embedding_schema.py  generate_schema.py  qwen_schema.py  recommend_schema.py  validate_schema.py
app/services/: embedding_service.py  generate_service.py  qdrant_service.py  service_ai.py  validate_service.py
app/vectorDB/: qdrant_setting.py
serverless/: Dockerfile  Dockerfile.runpod  LlamaGuard.Dockerfile  Llama_handler.py  Llama_requirements.txt  Qwen.Dockerfile  Qwen_requirements.txt  handler.py  llama.Dockerfile  requirements.txt
